syntax = "proto3";
option csharp_namespace = "Project.PaymentService.Protos";

service BookingService  {
  rpc CreateBookingPackage (CreateBookingPackageRequest) returns (CreateBookingPackageResponse);
  rpc CreateBookingDoctor (CreateBookingDoctorRequest) returns (CreateBookingDoctorResponse);
  rpc UpdateBookingPackage (UpdateBookingPackageRequest) returns (UpdateBookingResponse);
  rpc UpdateBookingDoctor (UpdateBookingDoctorRequest) returns (UpdateBookingResponse);
}
message CreateBookingPackageResponse  {
  string BookingPackageID = 1;
}
message CreateBookingDoctorResponse  {
  string BookingDoctorID = 1;
}
message CreateBookingPackageRequest {
  string UserID = 1;
  string ProfileID = 2;
  double Price = 3;
  string ServicePackageID = 4;
  string AppoinmentTime = 5;
}
message CreateBookingDoctorRequest {
  string DoctorID = 1;
  string UserID = 2;
  string ProfileID = 3;
  double Price = 4;
  int32 BookingType = 5;
  string ScheduleID = 6;
}
message UpdateBookingPackageRequest  {
  string BookingPackageID = 1;
}
message UpdateBookingDoctorRequest  {
  string BookingDoctorID = 1;
}
message UpdateBookingResponse {
  bool IsSuccess = 1; 
  string UserID = 2;
}